[project]
name = "reactions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["uv_build>=0.11.11,<0.12"]
build-backend = "uv_build"
